src/test/deca/syntax/invalid/resultats/test8_int-lex.res
'{': [@0,391:391='{',<36>,16:0]
'print': [@1,394:398='print',<17>,17:1]
'(': [@2,399:399='(',<34>,17:6]
INT: [@3,400:400='0',<1>,17:7]
INT: [@4,401:402='12',<1>,17:8]
')': [@5,403:403=')',<35>,17:10]
';': [@6,404:404=';',<39>,17:11]
'}': [@7,406:406='}',<37>,18:0]
